opening: fix spacing

--- a/src/app/pages/event/event-opening/event-opening.component.scss
+++ b/src/app/pages/event/event-opening/event-opening.component.scss
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   gap: 1rem;
+  margin-top: 1rem;
 }
 
 .row {
@@ -37,9 +38,10 @@
   }
 
   @media screen and (min-width: #{$bp-mobile + 1}) {
-  .image {
-    max-width: 50%;
-  }}
+    .image {
+      max-width: 50%;
+    }
+  }
 }
 
 .hero {
@@ -68,6 +70,6 @@
   }
 }
 
-.spacer {
-  margin: 1rem;
+.hero-card ::ng-deep .container {
+  background-color: rgba(0, 0, 0, 0.75) !important;
 }
